Fixed z-index problems

--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,7 @@ body, .game, .game-play, .game-score {
 .wizard { 
     width: 82px; height: 100px; 
     left: 100px; bottom: 100px; 
+    z-index: 3; 
     background-image: url( './images/wizard.png' ); 
     background-size: cover; 
     background-color: blue; 
@@ -64,16 +65,19 @@ body, .game, .game-play, .game-score {
 
 .fire-ball { 
     width: 40px; height: 40px; 
+    z-index: 2;
     background-image: url( './images/fire-ball.png' ); 
 }
 
 .cloud { 
     width: 200px; height: 200px;  
+    z-index: 1; 
     background-image: url( './images/cloud.png' ); 
 }
 
 .bug { 
     width: 60px; height: 60px; 
+    z-index: 1; 
     background-image: url( './images/bug.png' ); 
 }
 
